// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards children render 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  border-radius: 12px;
  overflow: hidden;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c4 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 24px;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fill,minmax(min(192px, 100%), 1fr) );
  grid-gap: 24px 24px;
  padding: 0px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    width: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 0px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <div
      class="c2"
    >
      <header
        class="c3"
      >
        \`$
        <div
          class="c4"
        />
        one
        <div
          class="c4"
        />
         - $
        0
        <div
          class="c4"
        />
        \`
      </header>
    </div>
    <div
      class="c2"
    >
      <header
        class="c3"
      >
        \`$
        <div
          class="c4"
        />
        two
        <div
          class="c4"
        />
         - $
        <div
          class="c4"
        />
        1
        <div
          class="c4"
        />
        \`
      </header>
    </div>
  </ul>
</div>
`;

exports[`Cards data objects 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  border-radius: 12px;
  overflow: hidden;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fill,minmax(min(192px, 100%), 1fr) );
  grid-gap: 24px 24px;
  padding: 0px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 0px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2"
    >
      <div
        class="c3"
      />
    </li>
    <li
      class="c2"
    >
      <div
        class="c3"
      />
    </li>
  </ul>
</div>
`;

exports[`Cards data strings 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  border-radius: 12px;
  overflow: hidden;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fill,minmax(min(192px, 100%), 1fr) );
  grid-gap: 24px 24px;
  padding: 0px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 0px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2"
    >
      <div
        class="c3"
      >
        one
      </div>
    </li>
    <li
      class="c2"
    >
      <div
        class="c3"
      >
        two
      </div>
    </li>
  </ul>
</div>
`;

exports[`Cards empty 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fill,minmax(min(192px, 100%), 1fr) );
  grid-gap: 24px 24px;
  padding: 0px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 0px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  />
</div>
`;

exports[`Cards empty no grommet wrapper 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fill,minmax(min(192px, 100%), 1fr) );
  grid-gap: 24px 24px;
  padding: 0px;
}

@media only screen and (max-width: 768px) {
  .c0 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c0 {
    padding: 0px;
  }
}

<ul
  class="c0"
/>
`;

exports[`Cards margin object 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  border-radius: 12px;
  overflow: hidden;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin-left: 48px;
  margin-right: 48px;
  grid-template-columns: repeat( auto-fill,minmax(min(192px, 100%), 1fr) );
  grid-gap: 24px 24px;
  padding: 0px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-left: 24px;
    margin-right: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 0px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2"
    >
      <div
        class="c3"
      >
        one
      </div>
    </li>
    <li
      class="c2"
    >
      <div
        class="c3"
      >
        two
      </div>
    </li>
  </ul>
</div>
`;

exports[`Cards margin string 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  border-radius: 12px;
  overflow: hidden;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 48px;
  grid-template-columns: repeat( auto-fill,minmax(min(192px, 100%), 1fr) );
  grid-gap: 24px 24px;
  padding: 0px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 0px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2"
    >
      <div
        class="c3"
      >
        one
      </div>
    </li>
    <li
      class="c2"
    >
      <div
        class="c3"
      >
        two
      </div>
    </li>
  </ul>
</div>
`;

exports[`Cards pad object 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  border-radius: 12px;
  overflow: hidden;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fill,minmax(min(192px, 100%), 1fr) );
  grid-gap: 24px 24px;
  padding-left: 48px;
  padding-right: 48px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2"
    >
      <div
        class="c3"
      >
        one
      </div>
    </li>
    <li
      class="c2"
    >
      <div
        class="c3"
      >
        two
      </div>
    </li>
  </ul>
</div>
`;

exports[`Cards pad string 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  border-radius: 12px;
  overflow: hidden;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fill,minmax(min(192px, 100%), 1fr) );
  grid-gap: 24px 24px;
  padding: 48px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 24px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2"
    >
      <div
        class="c3"
      >
        one
      </div>
    </li>
    <li
      class="c2"
    >
      <div
        class="c3"
      >
        two
      </div>
    </li>
  </ul>
</div>
`;

exports[`Cards renders a11yTitle and aria-label 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  border-radius: 12px;
  overflow: hidden;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fill,minmax(min(192px, 100%), 1fr) );
  grid-gap: 24px 24px;
  padding: 0px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 0px;
  }
}

<div>
  <div
    class="c0"
  >
    <ul
      aria-label="test"
      class="c1"
    >
      <li
        class="c2"
      >
        <div
          class="c3"
        />
      </li>
      <li
        class="c2"
      >
        <div
          class="c3"
        />
      </li>
    </ul>
    <ul
      aria-label="test-2"
      class="c1"
    >
      <li
        class="c2"
      >
        <div
          class="c3"
        />
      </li>
      <li
        class="c2"
      >
        <div
          class="c3"
        />
      </li>
    </ul>
  </div>
</div>
`;
